fix animation for keys on safari and firefox

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -31,25 +31,47 @@
 }
 
 .row > div.correct {
-  --background-color: #528d4e;
+  --background: #528d4e;
   width: 57px;
-  border: 0;
   height: 57px;
-  animation: flip 0.5s ease forwards;
+  background: #121212;
+  animation-name: flip;
+  -webkit-animation-name: flip;
+  animation-duration: 0.5s;
+  -webkit-animation-duration: 0.5s;
+  animation-timing-function: ease;
+  -webkit-animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
 }
 
 .row > div.almost {
-  --background-color: #b49f39;
+  --background: #b49f39;
+  background: #121212;
   width: 57px;
-  border: 0;
   height: 57px;
-  animation: flip 0.5s ease forwards;
+  animation-name: flip;
+  -webkit-animation-name: flip;
+  animation-duration: 0.5s;
+  -webkit-animation-duration: 0.5s;
+  animation-timing-function: ease;
+  -webkit-animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
 }
 
 .row > div.error {
-  --background-color: #3a393c;
+  --background: #3a393c;
   --border-color: #3a393c;
-  animation: flip 0.5s ease forwards;
+  background: #121212;
+  animation-name: flip;
+  -webkit-animation-name: flip;
+  animation-duration: 0.5s;
+  -webkit-animation-duration: 0.5s;
+  animation-timing-function: ease;
+  -webkit-animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
 }
 
 .row > div:nth-child(2) {
@@ -69,10 +91,18 @@
 }
 
 .row > div:nth-child(4) {
+  -webkit-animation-delay: 0.6s;
+  -moz-animation-delay: 0.6s;
+  -ms-animation-delay: 0.6s;
+  -o-animation-delay: 0.6s;
   animation-delay: 0.6s;
 }
 
 .row > div:nth-child(5) {
+  -webkit-animation-delay: 0.8s;
+  -moz-animation-delay: 0.8s;
+  -ms-animation-delay: 0.8s;
+  -o-animation-delay: 0.8s;
   animation-delay: 0.8s;
 }
 
@@ -80,20 +110,16 @@
 
 @keyframes flip {
   0% {
-    transform: rotateX(0);
-    background-color: #121212;
-  }
-  45% {
-    transform: rotateX(90deg);
-    background-color: #121212;
+    transform: scaleY(1);
+    background: #121212;
   }
   55% {
-    transform: rotateX(90deg);
-    background-color: var(--background-color);
+    transform: scaleY(0);
+    background: var(--background);
   }
   100% {
-    transform: rotateX(0);
-    background-color: var(--background-color);
+    transform: scaleY(1);
+    background: var(--background);
   }
 }
 
